--- a/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
+++ b/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
@@ -22,15 +22,15 @@ Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
 E:\STM32_WorkSpace\AZRTOS_ThreadX\MDK-ARM\AZRTOS_ThreadX.uvprojx
-Project File Date:  10/08/2021
+Project File Date:  10/09/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14', folder: 'D:\keil 5\ARM\ARMCLANG\Bin'
 Build target 'AZRTOS_ThreadX'
-compiling SDIO.c...
-compiling main.c...
+compiling SDTask.c...
+compiling UART.c...
 linking...
-Program Size: Code=46742 RO-data=538 RW-data=1132 ZI-data=25604  
+Program Size: Code=47414 RO-data=538 RW-data=1132 ZI-data=25604  
 FromELF: creating hex file...
 "AZRTOS_ThreadX\AZRTOS_ThreadX.axf" - 0 Error(s), 0 Warning(s).
 
@@ -56,7 +56,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.4.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
