运行电脑提示 无法识别USB设备

--- a/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
+++ b/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  10/13/2021
 <h2>Output:</h2>
 *** Using Compiler 'V6.14', folder: 'D:\keil 5\ARM\ARMCLANG\Bin'
 Build target 'AZRTOS_ThreadX'
-compiling main.c...
+compiling app_usbx_device.c...
 linking...
-Program Size: Code=62618 RO-data=538 RW-data=1220 ZI-data=73204  
+Program Size: Code=62574 RO-data=538 RW-data=1220 ZI-data=75244  
 FromELF: creating hex file...
 "AZRTOS_ThreadX\AZRTOS_ThreadX.axf" - 0 Error(s), 0 Warning(s).
 
