--- a/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
+++ b/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
@@ -27,7 +27,8 @@ Project File Date:  12/01/2021
 <h2>Output:</h2>
 *** Using Compiler 'V6.14', folder: 'D:\keil 5\ARM\ARMCLANG\Bin'
 Build target 'AZRTOS_ThreadX'
-compiling ETH_Drive.c...
+compiling NetXTest.c...
+compiling F429_NX_Drive.c...
 linking...
 Program Size: Code=45262 RO-data=526 RW-data=124 ZI-data=115772  
 FromELF: creating hex file...
@@ -55,7 +56,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.4.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
