--- a/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
+++ b/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
@@ -22,23 +22,16 @@ Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
 E:\STM32_WorkSpace\AZRTOS_ThreadX\MDK-ARM\AZRTOS_ThreadX.uvprojx
-Project File Date:  10/05/2021
+Project File Date:  12/15/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14', folder: 'D:\keil 5\ARM\ARMCLANG\Bin'
 Build target 'AZRTOS_ThreadX'
-../AZURE_RTOS/User_App/SYSTASK.c(32): warning: illegal character encoding in string literal [-Winvalid-source-encoding]
-                Printf((uint8_t *)"CPUʹ<D3><C3><C2>ʣ<BA>0x", sizeof("CPUʹ<D3><C3><C2>ʣ<BA>0x"));
-                                       ^~~~~~~~~~~~ ~~~~
-../AZURE_RTOS/User_App/SYSTASK.c(32): warning: illegal character encoding in string literal [-Winvalid-source-encoding]
-                Printf((uint8_t *)"CPUʹ<D3><C3><C2>ʣ<BA>0x", sizeof("CPUʹ<D3><C3><C2>ʣ<BA>0x"));
-                                                                         ^~~~~~~~~~~~ ~~~~
-2 warnings generated.
-compiling SYSTASK.c...
+compiling Test.c...
 linking...
-Program Size: Code=15734 RO-data=526 RW-data=16 ZI-data=10208  
+Program Size: Code=17346 RO-data=526 RW-data=16 ZI-data=11472  
 FromELF: creating hex file...
-"AZRTOS_ThreadX\AZRTOS_ThreadX.axf" - 0 Error(s), 2 Warning(s).
+"AZRTOS_ThreadX\AZRTOS_ThreadX.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
