--- a/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
+++ b/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
@@ -27,6 +27,10 @@ Project File Date:  12/16/2021
 <h2>Output:</h2>
 *** Using Compiler 'V6.14', folder: 'D:\keil 5\ARM\ARMCLANG\Bin'
 Build target 'AZRTOS_ThreadX'
+compiling touch_iic.c...
+linking...
+Program Size: Code=46734 RO-data=562 RW-data=16 ZI-data=11728  
+FromELF: creating hex file...
 "AZRTOS_ThreadX\AZRTOS_ThreadX.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,7 +55,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.4.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
