--- a/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
+++ b/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
@@ -22,16 +22,26 @@ Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
 E:\STM32_WorkSpace\AZRTOS_ThreadX\MDK-ARM\AZRTOS_ThreadX.uvprojx
-Project File Date:  12/16/2021
+Project File Date:  12/17/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14', folder: 'D:\keil 5\ARM\ARMCLANG\Bin'
 Build target 'AZRTOS_ThreadX'
-compiling F429_GX_Drive.c...
+compiling guiapp_resources.c...
+compiling GX_Task.c...
+compiling guiapp_specifications.c...
+../AZURE_RTOS/User_App/SYSTASK.c(36): warning: illegal character encoding in string literal [-Winvalid-source-encoding]
+                Printf((uint8_t *)"CPUʹ<D3><C3><C2>ʣ<BA>0x", sizeof("CPUʹ<D3><C3><C2>ʣ<BA>0x"));
+                                       ^~~~~~~~~~~~ ~~~~
+../AZURE_RTOS/User_App/SYSTASK.c(36): warning: illegal character encoding in string literal [-Winvalid-source-encoding]
+                Printf((uint8_t *)"CPUʹ<D3><C3><C2>ʣ<BA>0x", sizeof("CPUʹ<D3><C3><C2>ʣ<BA>0x"));
+                                                                         ^~~~~~~~~~~~ ~~~~
+2 warnings generated.
+compiling SYSTASK.c...
 linking...
-Program Size: Code=189948 RO-data=17680 RW-data=716 ZI-data=30908  
+Program Size: Code=188088 RO-data=17532 RW-data=516 ZI-data=30676  
 FromELF: creating hex file...
-"AZRTOS_ThreadX\AZRTOS_ThreadX.axf" - 0 Error(s), 0 Warning(s).
+"AZRTOS_ThreadX\AZRTOS_ThreadX.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
