--- a/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
+++ b/MDK-ARM/AZRTOS_ThreadX/AZRTOS_ThreadX.build_log.htm
@@ -27,11 +27,21 @@ Project File Date:  12/17/2021
 <h2>Output:</h2>
 *** Using Compiler 'V6.14', folder: 'D:\keil 5\ARM\ARMCLANG\Bin'
 Build target 'AZRTOS_ThreadX'
+compiling guiapp_resources.c...
+../AZURE_RTOS/User_App/SYSTASK.c(36): warning: illegal character encoding in string literal [-Winvalid-source-encoding]
+                Printf((uint8_t *)"CPUʹ<D3><C3><C2>ʣ<BA>0x", sizeof("CPUʹ<D3><C3><C2>ʣ<BA>0x"));
+                                       ^~~~~~~~~~~~ ~~~~
+../AZURE_RTOS/User_App/SYSTASK.c(36): warning: illegal character encoding in string literal [-Winvalid-source-encoding]
+                Printf((uint8_t *)"CPUʹ<D3><C3><C2>ʣ<BA>0x", sizeof("CPUʹ<D3><C3><C2>ʣ<BA>0x"));
+                                                                         ^~~~~~~~~~~~ ~~~~
+2 warnings generated.
+compiling SYSTASK.c...
 compiling GX_Task.c...
+compiling guiapp_specifications.c...
 linking...
-Program Size: Code=187364 RO-data=17360 RW-data=532 ZI-data=31828  
+Program Size: Code=193844 RO-data=17880 RW-data=784 ZI-data=33008  
 FromELF: creating hex file...
-"AZRTOS_ThreadX\AZRTOS_ThreadX.axf" - 0 Error(s), 0 Warning(s).
+"AZRTOS_ThreadX\AZRTOS_ThreadX.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
